# lightway

./: .gitignore  Cargo.toml  Earthfile  Makefile.toml  README.md  deny.toml  flake.nix  garnix.yaml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  nightly-cargo-deny.yaml  nightly-rust-update-check.yaml  weekly-cargo-update.yaml
docs/: README.md  connection_state_machine.md  design_overview.md  faq.md  inside_packet_codec.md  ip_translation.md  logs_and_metrics.md  parallel_connect.md  plugins.md  pmtu_discovery.md  tls_versions.md  udp_session_id.md  wireshark.md
lightway-app-utils/: Cargo.toml  README.md
lightway-app-utils/examples/: udprelay.rs
lightway-app-utils/src/: args.rs  codec_ticker.rs  connection_ticker.rs  dplpmtud_timer.rs  event_stream.rs  iouring.rs  lib.rs  metrics.rs  packet_codec.rs  sockopt.rs  state_stream.rs  tun.rs  utils.rs  wolfssl_tracing.rs
lightway-app-utils/src/args/: cipher.rs  connection_type.rs  duration.rs  ip_map.rs  logging.rs
lightway-app-utils/src/sockopt/: ip_mtu_discover.rs  ip_pktinfo.rs
lightway-client/: Cargo.toml  build.rs
lightway-client/examples/: route_monitor.rs
lightway-client/src/: args.rs  debug.rs  dns_manager.rs  io.rs  keepalive.rs  lib.rs  main.rs  route_manager.rs  routing_table.rs
lightway-client/src/io/: inside.rs  outside.rs
lightway-client/src/io/inside/: tun.rs
lightway-client/src/io/outside/: tcp.rs  udp.rs
lightway-client/src/io/outside/udp/: sockopt.rs
lightway-client/src/platform/: linux.rs  windows.rs
lightway-client/src/platform/linux/: dns_manager.rs
lightway-client/src/platform/macos/: dns_manager.rs
lightway-client/src/platform/windows/: addr_monitor.rs  dns_manager.rs  utils.rs
lightway-core/: Cargo.toml  README.md
lightway-core/fuzz/: Cargo.toml
lightway-core/fuzz/fuzz_targets/: fuzz_parse_frame.rs  fuzz_parse_header.rs
lightway-core/src/: borrowed_bytesmut.rs  builder_predicates.rs  cipher.rs  connection.rs  context.rs  encoding_request_states.rs  features.rs  io.rs  lib.rs  metrics.rs  packet.rs  packet_codec.rs  plugin.rs  utils.rs  version.rs  wire.rs
lightway-core/src/connection/: builders.rs  dplpmtud.rs  event.rs  fragment_map.rs  io_adapter.rs  key_update.rs
lightway-core/src/context/: ip_pool.rs  server_auth.rs
lightway-core/src/wire/: auth_failure.rs  auth_request.rs  auth_success_with_config_ipv4.rs  data.rs  data_frag.rs  encoding_request.rs  encoding_response.rs  ping.rs  pong.rs  server_config.rs
lightway-core/tests/: connection.rs  packet_codec.rs
lightway-core/wireshark/: lightway.lua
lightway-server/: Cargo.toml
lightway-server/src/: args.rs  auth.rs  codec_list.rs  connection.rs  connection_manager.rs  ip_manager.rs  lib.rs  main.rs  metrics.rs  statistics.rs
lightway-server/src/connection_manager/: connection_map.rs
lightway-server/src/io/: inside.rs  outside.rs
lightway-server/src/io/inside/: tun.rs
lightway-server/src/io/outside/: tcp.rs  udp.rs
lightway-server/src/io/outside/udp/: cmsg.rs
lightway-server/src/ip_manager/: ip_pool.rs
tests/: Earthfile  setup.sh
tests/base/: Earthfile  nginx.default.conf
tests/certs/: Earthfile  ca.crt
tests/client/: Earthfile  check-server.sh  client_config.yaml  docker-entrypoint.sh  run-test-inside.sh
tests/client/parallel_connect/: client_config.tcp.yaml  client_config.tcp_then_udp.yaml  client_config.udp.yaml  client_config.udp_then_tcp.yaml
tests/e2e/: Earthfile  docker-compose.parallel_connect.yml  docker-compose.yml  run-parallel-connect-test.sh  run-simple-test.sh  run-udp-floating-test.sh  run-with-compose-stack.sh
tests/server/: Earthfile  docker-entrypoint.sh  lwpasswd  server_config.yaml  token.priv  token.pub
