[workspace]

members = [
    "lightway-core",
    "lightway-core/fuzz",
    "lightway-app-utils",
    "lightway-client",
    "lightway-server",
]

resolver = "2"

[profile.release]
lto = true
debug = 1

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
unsafe_code = "deny"

[workspace.dependencies]
twelf = { version = "0.15.0", default-features = false, features = ["env", "clap", "yaml"]}
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
tokio-util = "0.7.10"
tokio-stream = "0.1.14"
thiserror = "1.0.57"
test-case = "3.1.0"
socket2 = "0.5.5"
serde = "1.0.189"
rand = "0.8.5"
pnet = "0.35.0"
more-asserts = "0.3.1"
metrics = "0.23.0"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
delegate = "0.12.0"
ctrlc = { version = "3.4.2", features = ["termination"] }
clap = { version = "4.4.7", features = ["derive"] }
bytes = "1.5.0"
async-trait = "0.1.77"
async-channel = { version = "2.1.1" }
anyhow = "1.0.79"
lightway-core = { path = "./lightway-core" }
lightway-app-utils = { path = "./lightway-app-utils" }
