[workspace]

members = [
    "lightway-core",
    "lightway-core/fuzz",
    "lightway-app-utils",
    "lightway-client",
    "lightway-server",
]

resolver = "3"

[profile.release]
lto = true
debug = 1

[workspace.package]
repository = "https://github.com/expressvpn/lightway"
edition = "2024"
authors = ["lightway-developers@expressvpn.com"]
license = "AGPL-3.0-only"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_unsafe = "deny"

[workspace.lints.clippy]
missing_safety_doc = "deny"
multiple_unsafe_ops_per_block = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_comment = "deny"

[workspace.dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
bytes = "1.5.0"
bytesize = { version = "1.3.0", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
ctrlc = { version = "3.4.2", features = ["termination"] }
delegate = "0.12.0"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
ipnet = { version = "2.8.0", features = ["serde"]}
libc = "0.2.152"
lightway-app-utils = { path = "./lightway-app-utils" }
lightway-core = { path = "./lightway-core" }
metrics = "0.24.0"
more-asserts = "0.3.1"
pnet = "0.35.0"
rand = "0.8.5"
serde = "1.0.189"
socket2 = "0.5.5"
test-case = "3.1.0"
thiserror = "2.0.3"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
twelf = { version = "0.15.0", default-features = false, features = ["env", "clap", "yaml"]}
