[package]
name = "lightway-app-utils"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/expressvpn/lightway"
authors = ["lightway-developers@expressvpn.com"]
license = "GPL-2.0-only"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "tokio" ]
io-uring = [ "dep:io-uring", "dep:async-channel", "dep:tokio", "dep:tokio-eventfd" ]
tokio = [ "dep:tokio", "dep:tokio-stream" ]

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true, optional = true }
bytes = { workspace = true }
clap = { workspace = true }
dashmap = "6.0.1"
humantime = "2.1.0"
io-uring = {  version = "0.6.3", optional = true }
lightway-core = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_with = "3.4.0"
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-eventfd = { version = "0.2.1", optional = true }
tokio-stream = { workspace = true, optional = true }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
tun2 = { version = "2.0.3", features = ["async"] }

[[example]]
name = "udprelay"
path = "examples/udprelay.rs"

[dev-dependencies]
async-trait = { workspace = true }
pnet = { workspace = true }
tokio-tun = "0.11.2"
