[package]
name = "lightway-app-utils"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "tokio" ]
io-uring = [ "dep:io-uring", "dep:tokio", "dep:tokio-eventfd" ]
tokio = [ "dep:tokio", "dep:tokio-stream" ]
debug = [ ]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
fs-mistrust = { version = "0.9.1", default-features = false }
humantime = "2.1.0"
io-uring = {  version = "0.7.0", optional = true }
ipnet.workspace = true
libc.workspace = true
lightway-core.workspace = true
metrics.workspace = true
serde.workspace = true
serde_with = "3.4.0"
serde_yaml = "0.9.34"
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tokio-eventfd = { version = "0.2.1", optional = true }
tokio-stream = { workspace = true, optional = true }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
tun = { version = "0.8", features = ["async"] }

[[example]]
name = "udprelay"
path = "examples/udprelay.rs"

[dev-dependencies]
async-trait.workspace = true
async-channel = { version = "2.1.1" }
pnet.workspace = true
test-case.workspace = true
