[package]
name = "lightway-client"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/expressvpn/lightway"
authors = ["lightway-developers@expressvpn.com"]
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["postquantum", "io-uring"]
debug = ["lightway-core/debug"]
io-uring = ["lightway-app-utils/io-uring"]
postquantum = ["lightway-core/postquantum"]
kyber_only = ["postquantum", "lightway-core/kyber_only"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
bytesize.workspace = true
clap.workspace = true
ctrlc.workspace = true
educe.workspace = true
futures = "0.3.30"
libc.workspace = true
lightway-app-utils.workspace = true
lightway-core.workspace = true
pnet.workspace = true
serde = { workspace = true, features = ["derive"] }
socket2.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["time"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true}
twelf.workspace = true

[dev-dependencies]
more-asserts.workspace = true
test-case.workspace = true
