[package]
name = "lightway-client"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["postquantum"]
debug = ["lightway-core/debug","lightway-app-utils/debug"]
io-uring = ["lightway-app-utils/io-uring"]
postquantum = ["lightway-core/postquantum"]
kyber_only = ["postquantum", "lightway-core/kyber_only"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
bytesize.workspace = true
clap.workspace = true
ctrlc.workspace = true
educe.workspace = true
futures = "0.3.30"
libc.workspace = true
lightway-app-utils.workspace = true
lightway-core.workspace = true
pnet.workspace = true
serde = { workspace = true, features = ["derive"] }
socket2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["time"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true}
twelf.workspace = true

[dev-dependencies]
more-asserts.workspace = true
test-case.workspace = true
tun.workspace = true
serial_test = "3.2.0"

[target.'cfg(any(target_os = "freebsd", target_os = "linux", target_os = "macos", target_os = "openbsd", target_os = "windows"))'.dependencies]
route_manager = { git = "https://github.com/rustp2p/route_manager.git", rev = "refs/pull/10/head", features = ["async"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation"] }