[package]
name = "lightway-client"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["postquantum"]
debug = ["lightway-core/debug","lightway-app-utils/debug"]
io-uring = ["lightway-app-utils/io-uring"]
postquantum = ["lightway-core/postquantum"]
kyber_only = ["postquantum", "lightway-core/kyber_only"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
bytesize.workspace = true
clap.workspace = true
ctrlc.workspace = true
educe.workspace = true
futures = "0.3.30"
libc.workspace = true
lightway-app-utils.workspace = true
lightway-core.workspace = true
pnet_packet.workspace = true
serde = { workspace = true, features = ["derive"] }
socket2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["time"] }
tokio-util.workspace = true
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true}
twelf.workspace = true

[dev-dependencies]
more-asserts.workspace = true
test-case.workspace = true
serial_test = "3.2.0"
tun-rs.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
route_manager = { version = "0.2.6", features = ["async"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.4"
system-configuration = "0.6.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation"] }
