[package]
name = "lightway-core"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/expressvpn/lightway"
authors = ["lightway-developers@expressvpn.com"]
license = "GPL-2.0-only"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["wolfssl/debug"]
# Enable additional APIs to support wire protocol fuzzing
fuzzing_api = []
postquantum = ["wolfssl/postquantum"]

[dependencies]
bytes = { workspace = true }
num_enum = "0.7.0"
thiserror = { workspace = true }
more-asserts = { workspace = true }
wolfssl = { git = "https://github.com/expressvpn/wolfssl-rs", default-features = false }
rand = { workspace = true }
rand_core = "0.6.4"
tracing = { workspace = true }
pnet = { workspace = true }
delegate = { workspace = true }
lru = "0.12.1"
once_cell = "1.19.0"
metrics = { workspace = true }
if_chain = "1.0.2"

[dev-dependencies]
async-trait = { workspace = true }
test-case = { workspace = true }
itertools = "0.13.0"
tokio = { workspace = true }
tokio-stream = { workspace = true }
lightway-app-utils = { workspace = true }
