[package]
name = "lightway-core"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/expressvpn/lightway"
authors = ["lightway-developers@expressvpn.com"]
license = "GPL-2.0-only"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["wolfssl/debug"]
# Enable additional APIs to support wire protocol fuzzing
fuzzing_api = []
postquantum = ["wolfssl/postquantum"]

[dependencies]
bytes = { workspace = true }
delegate = { workspace = true }
if_chain = "1.0.2"
lru = "0.12.1"
metrics = { workspace = true }
more-asserts = { workspace = true }
num_enum = "0.7.0"
once_cell = "1.19.0"
pnet = { workspace = true }
rand = { workspace = true }
rand_core = "0.6.4"
thiserror = { workspace = true }
tracing = { workspace = true }
wolfssl = { git = "https://github.com/expressvpn/wolfssl-rs", default-features = false }

[dev-dependencies]
async-trait = { workspace = true }
itertools = "0.13.0"
lightway-app-utils = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
