[package]
name = "lightway-core"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wolfssl/system_ca_certs"]
debug = ["wolfssl/debug"]
# Enable additional APIs to support wire protocol fuzzing
fuzzing_api = []
postquantum = ["wolfssl/postquantum"]
kyber_only = ["wolfssl/kyber_only"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
delegate.workspace = true
lru = "0.16.0"
metrics.workspace = true
more-asserts.workspace = true
num_enum = "0.7.0"
once_cell = "1.19.0"
parking_lot.workspace = true
pnet.workspace = true
rand.workspace = true
rand_core = "0.9.3"
thiserror.workspace = true
tracing.workspace = true
wolfssl = { git = "https://github.com/expressvpn/wolfssl-rs", default-features = false}

[dev-dependencies]
async-trait.workspace = true
itertools = "0.14.0"
lightway-app-utils.workspace = true
test-case.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
socket2.workspace = true
