[package]
name = "lightway-server"
version = "0.1.0"
repository = "https://github.com/expressvpn/lightway"
edition = "2021"
authors = ["lightway-developers@expressvpn.com"]
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["io-uring"]
debug = ["lightway-core/debug"]
io-uring = ["lightway-app-utils/io-uring"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-channel = { workspace = true, optional = true }
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
ctrlc.workspace = true
delegate.workspace = true
educe.workspace = true
ipnet = { version = "2.8.0", features = ["serde"]}
libc.workspace = true
lightway-app-utils.workspace = true
lightway-core = { workspace = true, features = ["postquantum"] }
metrics.workspace = true
metrics-util = "0.17.0"
pnet.workspace = true
rand.workspace = true
serde.workspace = true
socket2.workspace = true
thiserror.workspace = true
time = "0.3.29"
tokio.workspace = true
tokio-stream = { workspace = true, features = ["time"] }
tracing.workspace = true
tracing-log = "0.2.0"
tracing-subscriber = { workspace = true, features = ["json"] }
twelf.workspace = true

[dev-dependencies]
more-asserts.workspace = true
test-case.workspace = true
