[package]
name = "lightway-server"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["io-uring"]
debug = ["lightway-core/debug"]
io-uring = ["lightway-app-utils/io-uring"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
average = "0.16.0"
bytes.workspace = true
bytesize.workspace = true
clap.workspace = true
ctrlc.workspace = true
delegate.workspace = true
educe.workspace = true
ipnet.workspace = true
jsonwebtoken = "9.3.0"
libc.workspace = true
lightway-app-utils.workspace = true
lightway-core = { workspace = true, features = ["postquantum"] }
metrics.workspace = true
metrics-util = "0.18.0"
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
pnet.workspace = true
ppp = "2.2.0"
pwhash = "1.0.0"
rand.workspace = true
serde.workspace = true
serde_json = "1.0.128"
socket2.workspace = true
strum = { version = "0.27.1", features = ["derive"] }
thiserror.workspace = true
time = "0.3.29"
tokio.workspace = true
tokio-stream = { workspace = true, features = ["time"] }
tracing.workspace = true
tracing-log = "0.2.0"
tracing-subscriber = { workspace = true, features = ["json"] }
twelf.workspace = true

[dev-dependencies]
more-asserts.workspace = true
test-case.workspace = true
