[package]
name = "lightway-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["lightway-developers@expressvpn.com"]
license = "GPL-2.0-only"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = { workspace = true }

[dependencies.lightway-core]
workspace = true
features = ["fuzzing_api"]

[[bin]]
name = "fuzz_parse_header"
path = "fuzz_targets/fuzz_parse_header.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parse_frame"
path = "fuzz_targets/fuzz_parse_frame.rs"
test = false
doc = false
