[package]
name = "lightway-core-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = { workspace = true }

[dependencies.lightway-core]
workspace = true
features = ["fuzzing_api"]

[[bin]]
name = "fuzz_parse_header"
path = "fuzz_targets/fuzz_parse_header.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parse_frame"
path = "fuzz_targets/fuzz_parse_frame.rs"
test = false
doc = false
